syntax = "proto3";

package todoing.api.v1;

option go_package = "github.com/axfinn/todoIng/backend-go/pkg/api/v1";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

// 通用响应结构
message Response {
  int32 code = 1;
  string message = 2;
  google.protobuf.Any data = 3;
}

// 分页请求
message PaginationRequest {
  int32 page = 1;
  int32 limit = 2;
}

// 分页响应
message PaginationResponse {
  int32 page = 1;
  int32 limit = 2;
  int32 total = 3;
  int32 total_pages = 4;
}
